--- a/index.html
+++ b/index.html
@@ -6,77 +6,120 @@
   <title>German Speaking Test</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --primary-color: #6a11cb;
+      --secondary-color: #2575fc;
+      --card-bg: rgba(255, 255, 255, 0.1);
+      --text-color: #f0f0f0;
+      --input-bg: rgba(255, 255, 255, 0.2);
+      --success-color: #28a745;
+      --error-color: #dc3545;
+      --white: #fff;
+    }
     * { box-sizing: border-box; margin: 0; padding: 0; }
-    body { 
+    body {
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #74ABE2 0%, #5563DE 100%);
-      color: #333;
+      background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
+      color: var(--text-color);
       display: flex;
       align-items: center;
       justify-content: center;
       min-height: 100vh;
       padding: 20px;
+      overflow: hidden;
     }
     .card {
-      background: #fff;
-      border-radius: 16px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.1);
-      max-width: 480px;
+      background: var(--card-bg);
+      border-radius: 20px;
+      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      border: 1px solid rgba(255, 255, 255, 0.18);
+      max-width: 500px;
       width: 100%;
-      padding: 32px;
+      padding: 40px;
       text-align: center;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .card.listening {
+        transform: scale(1.02);
+        box-shadow: 0 12px 40px 0 rgba(31, 38, 135, 0.5);
     }
     h1 {
-      font-size: 1.8rem;
-      color: #5563DE;
+      font-size: 2rem;
+      color: var(--white);
       margin-bottom: 24px;
+      text-shadow: 0 2px 4px rgba(0,0,0,0.2);
     }
     .input-group {
       display: flex;
-      gap: 8px;
-      margin-bottom: 16px;
+      gap: 10px;
+      margin-bottom: 20px;
     }
     input[type="text"] {
       flex: 1;
-      padding: 12px 16px;
+      padding: 14px 18px;
       font-size: 1rem;
-      border: 2px solid #ddd;
-      border-radius: 8px;
-      transition: border-color 0.3s;
+      border: none;
+      border-radius: 10px;
+      background: var(--input-bg);
+      color: var(--white);
+      transition: background 0.3s;
+      font-family: 'Poppins', sans-serif;
+    }
+    input[type="text"]::placeholder {
+        color: rgba(255, 255, 255, 0.7);
     }
     input[type="text"]:focus {
       outline: none;
-      border-color: #5563DE;
+      background: rgba(255, 255, 255, 0.3);
     }
     .btn {
-      padding: 12px 20px;
+      padding: 14px 22px;
       font-size: 1rem;
       font-weight: 600;
       border: none;
-      border-radius: 8px;
+      border-radius: 10px;
       cursor: pointer;
-      transition: background 0.3s, transform 0.2s;
-      background: #5563DE;
-      color: #fff;
-      box-shadow: 0 4px 16px rgba(85,99,222,0.4);
+      transition: all 0.3s ease;
+      background: linear-gradient(135deg, rgba(255,255,255,0.2) 0%, rgba(255,255,255,0.1) 100%);
+      color: var(--white);
+      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
     }
     .btn:hover {
-      background: #4051b5;
-      transform: translateY(-2px);
+      background: linear-gradient(135deg, rgba(255,255,255,0.3) 0%, rgba(255,255,255,0.2) 100%);
+      transform: translateY(-3px);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.3);
     }
     .btn:active {
       transform: translateY(0);
-      box-shadow: 0 2px 8px rgba(85,99,222,0.4);
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
     }
     #feedback {
       margin-top: 24px;
-      font-size: 1.25rem;
+      font-size: 1.5rem;
+      font-weight: 600;
       min-height: 1.5em;
+      transition: color 0.4s ease, transform 0.4s ease;
+    }
+    #feedback.correct {
+        color: var(--success-color);
+        transform: scale(1.1);
+        text-shadow: 0 0 10px var(--success-color);
+    }
+    #feedback.wrong {
+        color: var(--error-color);
+        animation: shake 0.5s ease;
+    }
+    @keyframes shake {
+        0%, 100% { transform: translateX(0); }
+        25% { transform: translateX(-5px); }
+        75% { transform: translateX(5px); }
     }
     #spoken {
       margin-top: 12px;
       font-size: 1rem;
-      color: #666;
+      color: rgba(255, 255, 255, 0.8);
       min-height: 1.2em;
     }
     .controls {
@@ -105,16 +148,23 @@
 
   <script>
     const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
+    const card = document.querySelector('.card');
+    const feedbackEl = document.getElementById('feedback');
+    const spokenEl = document.getElementById('spoken');
+    const targetPhraseEl = document.getElementById('targetPhrase');
+
     if (!SpeechRecognition) {
+      feedbackEl.textContent = "Bitte verwenden Sie Chrome oder Edge.";
       alert("Bitte verwenden Sie Chrome oder Edge für diese Anwendung.");
     }
+
     const recognition = new SpeechRecognition();
     recognition.lang = 'de-DE';
     recognition.continuous = false;
     recognition.interimResults = false;
 
     document.getElementById('speakBtn').onclick = () => {
-      const phrase = document.getElementById('targetPhrase').value.trim();
+      const phrase = targetPhraseEl.value.trim();
       if (!phrase) return;
       const utter = new SpeechSynthesisUtterance(phrase);
       utter.lang = 'de-DE';
@@ -122,30 +172,46 @@
     };
 
     document.getElementById('startBtn').onclick = () => {
-      const target = document.getElementById('targetPhrase').value.trim().toLowerCase();
+      const target = targetPhraseEl.value.trim().toLowerCase();
       if (!target) {
         alert("Bitte geben Sie zuerst eine Phrase ein!");
         return;
       }
       recognition.start();
-      document.getElementById('feedback').textContent = "Höre...";
-      document.getElementById('spoken').textContent = '';
     };
 
     document.getElementById('stopBtn').onclick = () => {
       recognition.stop();
     };
 
+    recognition.onstart = () => {
+        card.classList.add('listening');
+        feedbackEl.textContent = "Höre...";
+        feedbackEl.className = '';
+        spokenEl.textContent = '';
+    };
+
+    recognition.onend = () => {
+        card.classList.remove('listening');
+    };
+
     recognition.onresult = (e) => {
       const spoken = e.results[0][0].transcript.trim().toLowerCase();
-      document.getElementById('spoken').textContent = `Sie sagten: ${spoken}`;
-      const target = document.getElementById('targetPhrase').value.trim().toLowerCase();
-      document.getElementById('feedback').textContent = 
-        spoken === target ? '✅ Richtig!' : '❌ Versuchen Sie es erneut!';
+      spokenEl.textContent = `Sie sagten: "${spoken}"`;
+      const target = targetPhraseEl.value.trim().toLowerCase();
+      
+      if (spoken === target) {
+          feedbackEl.textContent = '✅ Perfekt!';
+          feedbackEl.className = 'correct';
+      } else {
+          feedbackEl.textContent = '❌ Fast! Versuchen Sie es erneut!';
+          feedbackEl.className = 'wrong';
+      }
     };
 
     recognition.onerror = (e) => {
-      document.getElementById('feedback').textContent = `Fehler: ${e.error}`;
+      feedbackEl.textContent = `Fehler: ${e.error}`;
+      feedbackEl.className = 'wrong';
     };
   </script>
 </body>
